<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="logo_image">app logo</string>
    <string name="nextLbl">NEXT</string>
    <string name="mensLbl">Mens</string>
    <string name="womensLbl">Womens</string>
    <string name="co_edLbl">Co-ed</string>
    <string name="leagueOptionLbl">Desired League:</string>
    <string name="startLbl">GET STARTED</string>
    <string name="welcomeH1">GO ALL IN</string>
    <string name="welcomeH2">ON GOING ALL OUT</string>
    <string name="welcomeH3">Find a team in your city and dominate the league</string>
    <string name="finishLbl">FINISH</string>
    <string name="skillOptionLbl">I am a:</string>
    <string name="ballerLbl">Baller</string>
    <string name="beginnerLbl">Beginner</string>
    <string name="search_league">Looking for a league near you...</string>
</resources>
