<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillLevelActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/bckgrndSkillLvlImg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>

    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logoSkillLvlTxt"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/logo_image"/>

    <TextView
            android:text="@string/skillOptionLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/h1SkillLvlTxt" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:textSize="16sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/logoSkillLvlTxt"/>

    <Button
            android:text="@string/finishLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/finishSkillLvlBtn" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/bckgrndSkillLvlImg" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:background="@drawable/swoosh_button"
            android:fontFamily="@font/montserrat" android:textSize="18sp" android:textColor="@android:color/white"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/h1SkillLvlTxt">
        <ToggleButton
                android:text="@string/beginnerLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerSkillLvlBtn" android:layout_weight="1"
                android:textOff="@string/beginnerLbl" android:textOn="@string/beginnerLbl"
                android:fontFamily="@font/montserrat"
                android:textColor="@android:color/white" android:textSize="18sp"
                android:background="@drawable/swoosh_toggle"
                android:textAllCaps="false" android:layout_marginEnd="16dp"/>
        <ToggleButton
                android:text="@string/ballerLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerSkillLvlBtn" android:layout_weight="1"
                android:textOff="@string/ballerLbl" android:textOn="@string/ballerLbl"
                android:fontFamily="@font/montserrat"
                android:textColor="@android:color/white" android:textSize="18sp"
                android:background="@drawable/swoosh_toggle"
                android:textAllCaps="false" android:layout_marginStart="16dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>