<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Gender_Activity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/bckgrndGenderImg"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/background_image"/>
    <TextView
            android:text="@string/leagueOptionLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/h1GenderTxt" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:textSize="16sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/logoGenderTxt"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logoGenderTxt"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/logo_image"/>
    <Button
            android:text="@string/nextLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextGenderBtn" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/bckgrndGenderImg" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:background="@drawable/swoosh_button"
            android:fontFamily="@font/montserrat" android:textSize="18sp" android:textColor="@android:color/white"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/h1GenderTxt">
        <ToggleButton
                android:text="@string/mensLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menGenderBtn" android:fontFamily="@font/montserrat"
                android:textColor="@android:color/white" android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:singleLine="true" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                android:textOff="@string/mensLbl" android:textOn="@string/mensLbl" android:background="@drawable/swoosh_toggle"
                android:textAllCaps="false"/>
        <ToggleButton
                android:text="@string/womensLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/womensGenderBtn"
                android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat" android:textSize="18sp" android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:textOff="@string/womensLbl"
                android:textOn="@string/womensLbl" android:background="@drawable/swoosh_toggle" android:textAllCaps="false"/>
        <ToggleButton
                android:text="@string/co_edLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/coedGenderBtn" android:textSize="18sp"
                android:textColor="@android:color/white" android:textAlignment="center"
                android:fontFamily="@font/montserrat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" android:layout_marginTop="8dp" android:textOff="@string/co_edLbl"
                android:textOn="@string/co_edLbl" android:background="@drawable/swoosh_toggle" android:textAllCaps="false"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>